blocks/iispmun-bannerhead/style.css
.iispmun-title-section {
    margin: 0;

    display: flex;
    justify-content: center;
    align-items: center;
}

.iispmun-title-container {
    max-width: 700px;
    width: 85%;

    color: var(--wp--preset--color--purple);
}

.iispmun-watermark {
    position: absolute;
    min-width: 900px;
    width: 75%;

    opacity: 8%;
}

.iispmun-supertitle {
    font-size: 18px;
}

.iispmun-subtitle {
    line-height: 1.8;
    font-size: 16px;
    text-align: justify;
}

.iispmun-date {
    margin: 40px 0 5px 0;
    font-size: 19px;
}

.iispmun-location {
    font-size: 22px;
}

.iispmun-separator-container {
    margin: 20px 0;

    display: flex;
    justify-content: center;
}

.iispmun-separator-container img {
    width: 25%;
    min-width: 130px;
}

